--- a/source/less/page-header.less
+++ b/source/less/page-header.less
@@ -20,7 +20,6 @@
 .nav__logo {
   width: 190px;
   height: 40px;
-  background-image: url(../img/logo-mobile.svg);
   margin: 10px 35px 10px 20px;
   background-repeat: no-repeat;
 }
@@ -147,7 +146,6 @@
   .nav__logo {
     width: 173px;
     height: 59px;
-    background-image: url(../img/logo-tablet.svg);
     margin: 24px 30px;
   }
 
@@ -203,7 +201,7 @@
   }
 
   .page-header__wrapper {
-    background-color: #fff;
+    background-color: rgba(250, 250, 250, 0);
     width: 1440px;
     display: flex;
     flex-direction: row;
@@ -212,7 +210,6 @@
   .nav__logo {
     width: 202px;
     height: 59px;
-    background-image: url(../img/logo-desktop.svg);
     margin: 24px 40px;
     margin-left: 110px;
     margin-top: 54px;
