--- a/source/less/program.less
+++ b/source/less/program.less
@@ -60,6 +60,25 @@
     left: 95px;
   }
 
+  .weight__link:hover::after {
+    content: url(../img/icon-right-arrow-verylong.svg);
+    position: absolute;
+    width: 33px;
+    left: 130px;
+  }
+
+  .weight__link:active {
+    opacity: 0.3;
+  }
+
+  .weight__link:active::after {
+    content: url(../img/icon-right-arrow-verylong.svg);
+    position: absolute;
+    width: 33px;
+    left: 130px;
+    opacity: 0.3;
+  }
+
   .weight__slim::before {
     content: "";
     width: 50px;
@@ -155,6 +174,25 @@
       top: -3px;
     }
 
+    .weight__link:hover::after {
+      content: url(../img/icon-right-arrow-verylong.svg);
+      position: absolute;
+      width: 33px;
+      left: 130px;
+    }
+
+    .weight__link:active {
+      opacity: 0.3;
+    }
+
+    .weight__link:active::after {
+      content: url(../img/icon-right-arrow-verylong.svg);
+      position: absolute;
+      width: 33px;
+      left: 130px;
+      opacity: 0.3;
+    }
+
     .weight__slim::before {
       content: "";
       width: 200px;
@@ -246,8 +284,27 @@
     .weight__link::after {
       content: url(../img/icon-right-arrow-long.svg);
       position: absolute;
-      width: 25px;
+      width: 24px;
       left: 130px;
+    }
+
+    .weight__link:hover::after {
+      content: url(../img/icon-right-arrow-verylong.svg);
+      position: absolute;
+      width: 33px;
+      left: 130px;
+    }
+
+    .weight__link:active {
+      opacity: 0.3;
+    }
+
+    .weight__link:active::after {
+      content: url(../img/icon-right-arrow-verylong.svg);
+      position: absolute;
+      width: 33px;
+      left: 130px;
+      opacity: 0.3;
     }
 
     .weight__slim::before {
