--- a/source/less/map.less
+++ b/source/less/map.less
@@ -4,6 +4,7 @@
   min-width: 320px;
   margin: 0 auto;
   align-items: center;
+  height: 476px;
 }
 
 .map__wrapper {
@@ -55,6 +56,7 @@
  @media (min-width: @tablet-width) {
   .map {
     min-width: 768px;
+    height: 597px;
   }
 
   .map__wrapper {
