--- a/source/less/cover.less
+++ b/source/less/cover.less
@@ -12,6 +12,10 @@
   background-color: #fff;
   position: relative;
   min-height: 502px;
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url(../img/index-background-mobile@2x.jpg);
+    background-size: 320px auto;
+  }
 }
 
 .cover__h1 {
@@ -142,6 +146,10 @@
     right: 0px;
     top: -140px;
     z-index: -1;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url(../img/index-background-desktop@2x.jpg);
+      background-size: 721px auto;
+    }
   }
 
   .cover__h1 {
