--- a/source/less/present.less
+++ b/source/less/present.less
@@ -13,6 +13,10 @@
   width: 280px;
   background-image: url(../img/gift-photo-mobile@1x.jpg);
   position: relative;
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url(../img/gift-photo-mobile@2x.jpg);
+    background-size: 280px auto;
+  }
 }
 
 .present__icon {
@@ -53,6 +57,10 @@
     background-image: url(../img/gift-photo-tablet@1x.jpg);
     background-repeat: no-repeat;
     position: relative;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url(../img/gift-photo-tablet@2x.jpg);
+      background-size: 708px auto;
+    }
   }
 
   .present__icon {
@@ -94,6 +102,10 @@
     background-image: url(../img/gift-photo-desktop@1x.jpg);
     background-repeat: no-repeat;
     position: relative;
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url(../img/gift-photo-desktop@2x.jpg);
+      background-size: 245px auto;
+    }
   }
 
   .present__icon {
