--- a/source/less/present.less
+++ b/source/less/present.less
@@ -5,6 +5,7 @@
   align-items: center;
   margin: 0 auto;
   max-height: 289px;
+  margin-bottom: 37px;
 }
 
 .present__wrapper {
@@ -90,7 +91,7 @@
     flex-direction: column;
     width: 245px;
     align-items: center;
-    margin: 0 auto;
+    margin: 0 42px;
     min-height: 200px;
     margin-bottom: 0px;
   }
@@ -113,7 +114,7 @@
     height: 60px;
     position: absolute;
     top: 65px;
-    left: 90px;
+    left: 95px;
     polygon {
       fill: #ffffff;
     }
