--- a/source/less/additional-product.less
+++ b/source/less/additional-product.less
@@ -19,7 +19,7 @@
   font-weight: 300;
   margin: 0 20px;
   border-bottom: 1px solid #ededed;
-  padding: 20px 0;
+  padding: 25px 0;
 }
 
 .additional-product__wrapper h2::before {
@@ -29,7 +29,7 @@
   height: 3px;
   background-color: #68b738;
   right: 0;
-  top: 40px;
+  top: 43px;
 }
 
 .list-product {
@@ -39,12 +39,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 35px;
 }
 
 .list-product__item {
   padding: 0;
   padding-bottom: 20px;
   border-bottom: 1px solid #ededed;
+  height: 109px;
 }
 
 .list-product__heading {
@@ -62,6 +64,11 @@
   margin: 7px 0 14px;
 }
 
+.list-product__item--p {
+  margin-top: -5px;
+  margin-bottom: 25px;
+}
+
 .list-product__link {
   font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
@@ -69,8 +76,8 @@
   color: #fff;
   background-color: #68b738;
   text-decoration: none;
-  padding: 5px 110px;
-  margin: 7px 0 17px;
+  padding: 7px 110px;
+  margin: 12px 0 17px;
 }
 
 .list-product__link:hover {
@@ -90,7 +97,7 @@
   .additional-product__wrapper {
     width: 768px;
     background-color: #fff;
-    margin-bottom: 69px;
+    margin-bottom: 76px;
   }
 
   .additional-product__wrapper h2 {
@@ -101,6 +108,7 @@
     padding: 20px 36px;
     background-color: #fff;
     width: 338px;
+    margin-bottom: 53px;
   }
 
   .additional-product__wrapper h2::before {
@@ -136,6 +144,7 @@
     border: 1px solid #ededed;
     border-bottom: none;
     width: 100%;
+    height: 118px;
   }
 
   .list-product__item:last-child {
@@ -147,14 +156,14 @@
     font-size: 20px;
     text-transform: uppercase;
     color: #000000;
-    margin: 27px 0 23px;
+    margin: 20px 0 20px;
   }
 
   .list-product__text {
     font-family: "Arial", sans-serif;
     font-size: 16px;
     color: #000000;
-    margin: 32px 0 27px;
+    margin: 30px 0 24px 27px;
   }
 
   .list-product__link {
@@ -172,6 +181,7 @@
     display: flex;
     justify-content: space-between;
     margin: 0 37px;
+    height: 80px;
   }
 }
 
@@ -184,11 +194,13 @@
     width: 1440px;
     background-color: #fff;
     margin-bottom: 69px;
+    height: 450px;
   }
 
   .additional-product__content {
     display: flex;
     flex-direction: row;
+    margin-top: 50px;
   }
 
   .additional-product__wrapper h2 {
