Доработка соответствия браузерам

--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -61,6 +61,10 @@
 //   top: 18px;
 // }
 
+.copyright__link {
+  text-decoration: none;
+}
+
 .page-footer__copyright {
   display: flex;
   margin: 0 20px;
