--- a/source/less/profile.less
+++ b/source/less/profile.less
@@ -679,7 +679,7 @@
   }
 
   .info-cat {
-    max-width: 690px;
+    max-width: 700px;
   }
 
   .form__fieldset-info {
@@ -795,7 +795,12 @@
   }
 
   .form__owner label {
-    margin: 0 40px;
+    margin: 0px;
+    width: 600px;
+  }
+
+  .label-mail {
+    margin-right: 60px;
   }
 
   .form__comment label {
@@ -831,7 +836,8 @@
   .owner__label {
     display: flex;
     width: 1220px;
-    margin: 0 70px;
+    margin: 0;
+    margin-left: 110px;
   }
 
   .form__owner input[type="text"],
@@ -853,6 +859,10 @@
     width: 470px;
   }
 
+  .form__weight{
+    width: 600px;
+  }
+
   .form__weight ul {
     list-style: none;
     margin: 0;
@@ -860,7 +870,6 @@
     padding: 20px 0;
     width: 568px;
     min-height: 125px;
-    margin: 0;
   }
 
   .form__weight li {
