--- a/source/less/example.less
+++ b/source/less/example.less
@@ -37,7 +37,6 @@
   margin-top: 27px;
 }
 
-
 .example__block {
   display: flex;
   position: relative;
@@ -45,7 +44,6 @@
   margin-left: 3px;
   margin-top: 25px;
 }
-
 
 .block__weight {
   position: relative;
@@ -89,7 +87,6 @@
   max-width: 85px;
   margin-left: 18px;
   margin-top: -7px;
-
 }
 
 .example__text {
@@ -116,19 +113,16 @@
   display: none;
 }
 
-.slider__text {
-  display: flex;
-  justify-content: space-between;
-  width: 200px;
-  margin-left: 63px;
-}
-
 .slider__list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
   margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  margin-left: 63px;
 }
 
 .slider__button {
@@ -148,6 +142,7 @@
   border-radius: 50%;
   top: 50%;
   transform: translateY(-50%);
+  margin-left: 45px;
 }
 
 .slider__button input[type="radio"]:checked + .slider-radio {
@@ -164,12 +159,18 @@
   transform: translateY(-50%);
 }
 
-.slider__text p {
+.slider__button {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   line-height: 16px;
   text-transform: uppercase;
   color: #111111;
+  border-bottom: 1px dotted #bebebe;
+  padding: 5px 0;
+}
+
+.button-befor {
+  margin-left: 10px;
 }
 
 @media (min-width: @tablet-width) {
@@ -178,6 +179,7 @@
     flex-direction: column;
     min-width: 768px;
     height: 1080px;
+    background-color: #f2f2f2;
   }
 
   .expamle__wrapper {
@@ -202,12 +204,10 @@
     margin-top: 50px;
   }
 
-
   .example__block {
     margin-left: 0px;
     margin-right: 170px;
   }
-
 
   .block__weight {
     width: 162px;
@@ -254,6 +254,7 @@
     width: 690px;
     height: 517px;
   }
+
   .img__befor {
     width: 690px;
     height: 517px;
@@ -263,29 +264,16 @@
     display: none;
   }
 
-  .slider__text {
-    display: flex;
-    justify-content: space-between;
-    width: 200px;
-    margin-left: 250px;
-  }
-
-  .slider__text p {
-    font-family: "Oswald", "Arial", sans-serif;
-    font-size: 20px;
-    line-height: 20px;
-    text-transform: uppercase;
-    color: #111111;
-    border-bottom: 1px dotted #bebebe;
-    padding: 5px 0;
-  }
-
   .slider__list {
     list-style: none;
     margin: 0;
     padding: 0;
     display: flex;
     margin-top: 25px;
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
+    margin-left: 250px;
   }
 
   .slider__button {
@@ -305,6 +293,7 @@
     border-radius: 50%;
     top: 50%;
     transform: translateY(-50%);
+    margin-left: 65px;
   }
 
   .slider__button input[type="radio"]:checked + .slider-radio {
@@ -320,6 +309,20 @@
     top: 50%;
     transform: translateY(-50%);
   }
+
+  .slider__button {
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 20px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #111111;
+    border-bottom: 1px dotted #bebebe;
+    padding: 5px 0;
+  }
+
+  .button-befor {
+    margin-left: 50px;
+  }
 }
 
 @media (min-width: @desktop-width)  {
@@ -328,8 +331,9 @@
     flex-direction: column;
     min-width: 1440px;
     position: relative;
-    background-color: rgba(250, 250, 250, 0);
-    height: 605px;
+    height: 472px;
+    margin-top: 133px;
+    background-color: #f2f2f2;
   }
 
   .expamle__wrapper {
@@ -345,7 +349,7 @@
     margin-left: 0px;
     text-align: left;
     width: 595px;
-    margin-top: -178px;
+    margin-top: -241px;
     background-color: #fff;
     padding-bottom: 44px;
   }
@@ -360,6 +364,14 @@
 
   .example__block {
     margin-left: 0px;
+  }
+
+  .example__slider {
+    width: 690px;
+    height: 500px;
+    z-index: 1;
+    position: relative;
+    margin-top: -133px;
   }
 
   .block__weight {
@@ -402,34 +414,41 @@
     width: 690px;
     height: 517px;
     margin-left: -25px;
-    margin-bottom: 290px;
+    margin-top: -140px;
+  }
+
+  .slider__list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    margin-top: 25px;
+    position: absolute;
+    bottom: 40px;
+    right: 230px;
+    margin: 0;
   }
 
   .slider__after {
     display: none;
   }
 
-  .example__bgc {
-    width: 100%;
-    height: 464px;
-    background-color: #f2f2f2;
-    top: 142px;
-    position: absolute;
-  }
-
-  .example__slider {
-    z-index: 1;
-    position: relative;
-  }
-
   .example__desktop {
     z-index: 3;
-    background-color: #f2f2f2;
+    background-color: rgba(250, 250, 250, 0);
   }
 
-  .slider__text {
-    position: absolute;
-    top: 505px;
-    right: 250px;
+  .slider__button {
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 20px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #111111;
+    border-bottom: 1px dotted #bebebe;
+    padding: 5px 0;
+  }
+
+  .button-befor {
+    margin-left: 50px;
   }
 }
