--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -36,30 +36,15 @@
   border-bottom: 1px solid #d9d9d9;
 }
 
-// .list-social__vk::after {
-//   content: url(../img/icon-vk.svg);
-//   position: absolute;
-//   width: 23px;
-//   height: 15px;
-//   left: 72px;
-// }
+.list-social li {
+  margin: 0;
+  margin-right: 20px;
+  margin-left: 0px;
+}
 
-// .list-social__ins::after {
-//   content: url(../img/icon-insta.svg);
-//   position: absolute;
-//   width: 16px;
-//   height: 16px;
-//   left: 132px;
-// }
-
-// .list-social__fb::after {
-//   content: url(../img/icon-fb.svg);
-//   position: absolute;
-//   width: 10px;
-//   height: 19px;
-//   left: 188px;
-//   top: 18px;
-// }
+.list-social li:first-child {
+  margin-left: 70px;
+}
 
 .copyright__link {
   text-decoration: none;
@@ -91,6 +76,10 @@
 
 .page-footer__logo-link:active {
   opacity: 0.6;
+}
+
+.copyright__link {
+  text-decoration: none;
 }
 
 @media (min-width: @tablet-width) {
@@ -134,36 +123,15 @@
     min-width: 125px;
   }
 
+  .list-social li {
+    margin: 0;
+    margin-right: 20px;
+    margin-left: 0px;
+  }
+
   .list-social a {
     cursor: pointer;
   }
-
-  // .list-social__vk::after {
-  //   content: url(../img/icon-vk.svg);
-  //   position: absolute;
-  //   width: 30px;
-  //   height: 16px;
-  //   left: 0px;
-  //   top: 26px;
-  // }
-
-  // .list-social__ins::after {
-  //   content: url(../img/icon-insta.svg);
-  //   position: absolute;
-  //   width: 23px;
-  //   height: 23px;
-  //   left: 58px;
-  //   top: 23px;
-  // }
-
-  // .list-social__fb::after {
-  //   content: url(../img/icon-fb.svg);
-  //   position: absolute;
-  //   width: 14px;
-  //   height: 28px;
-  //   left: 110px;
-  //   top: 21px;
-  // }
 
   .page-footer__copyright {
     display: flex;
@@ -184,6 +152,10 @@
   .copyright__logo {
     position: absolute;
     top: 5px;
+  }
+
+  .copyright__link {
+    text-decoration: none;
   }
 }
 
@@ -227,39 +199,21 @@
     min-width: 125px;
   }
 
+  .list-social li {
+    margin: 0;
+    margin-right: 30px;
+    margin-left: -10px;
+  }
+
   .list-social a {
     cursor: pointer;
   }
 
-  .list-social:hover .list-social__vk {
+  .list-social:hover a {
     path {
     fill: #68b738;
     }
   }
-
-  // .list-social__vk::after {
-  //   content: url(../img/icon-vk.svg);
-  //   position: absolute;
-  //   width: 30px;
-  //   height: 16px;
-  //   left: 0px;
-  // }
-
-  // .list-social__ins::after {
-  //   content: url(../img/icon-insta.svg);
-  //   position: absolute;
-  //   width: 23px;
-  //   height: 23px;
-  //   left: 60px;
-  // }
-
-  // .list-social__fb::after {
-  //   content: url(../img/icon-fb.svg);
-  //   position: absolute;
-  //   width: 14px;
-  //   height: 28px;
-  //   left: 116px;
-  // }
 
   .page-footer__copyright {
     display: flex;
