--- a/source/less/profile.less
+++ b/source/less/profile.less
@@ -199,9 +199,12 @@
 }
 
 .form__weight li {
-  margin: 0;
-  margin-bottom: -1px;
-  margin-top: -3px;
+  padding: 0;
+  margin: 17px 0 0 0;
+}
+
+.form__weight li:first-child {
+  margin-top: 0px;
 }
 
 .form__additional__list-check {
@@ -227,7 +230,7 @@
   padding-top: 10px;
 }
 
-.form__additional__list-check li{
+.form__additional__list-check li {
   margin: 0;
   padding: 10px 0;
 }
@@ -531,12 +534,11 @@
 
   .form__weight li {
     padding: 0;
-    margin: 0;
+    margin: 23px 0;
   }
 
   .form__weight li:first-child {
     margin-top: 10px;
-    margin-bottom: -7px;
   }
 
   .form__additional__list-check {
@@ -791,7 +793,7 @@
   }
 
   .form__weight label {
-    margin-left: 70px;
+    margin-left: 20px;
   }
 
   .form__owner label {
@@ -859,7 +861,7 @@
     width: 470px;
   }
 
-  .form__weight{
+  .form__weight {
     width: 600px;
   }
 
@@ -869,12 +871,16 @@
     border: 1px solid #ededed;
     padding: 20px 0;
     width: 568px;
-    min-height: 125px;
+    height: 155px;
   }
 
-  .form__weight li {
+  .form__weight .form__weight-li {
     padding: 0;
-    margin: 0;
+    margin: 25px 0;
+  }
+
+  .form__weight li:first-child {
+    margin-top: 7px;
   }
 
   .form__additional__list-check {
