Исправление после 1ой проверки: Б5 Б13

--- a/source/less/body.less
+++ b/source/less/body.less
@@ -26,3 +26,11 @@ body {
   overflow: hidden;
 }
 
+@font-face {
+  font-family: Oswald;
+  src: url('oswaldregular.woff2')
+       format('woff2'),
+       url('oswaldregular.woff')
+       format('woff');
+}
+
