--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,13 +1,37 @@
 @import "body.less";
 @import "page-header.less";
+@import "nav__logo.less";
+@import "nav__button.less";
+@import "list-menu.less";
 @import "program.less";
 @import "advantages.less";
 @import "map.less";
 @import "page-footer.less";
 @import "catalog.less";
 @import "example.less";
+@import "example__block.less";
+@import "block__weight.less";
+@import "block__time.less";
+@import "example__slider.less";
 @import "cover.less";
 @import "additional-product.less";
 @import "present.less";
 @import "profile.less";
+@import "profile__form.less";
+@import "form__fieldset-info.less";
+@import "form__info-cat";
+@import "form__weight.less";
+@import "form__owner.less";
+@import "form__comment.less";
+@import "form__additional.less";
+@import "form__button-text.less";
 @import "variables.less";
+@import "list-product.less";
+@import "list-page.less";
+@import "catalog-product.less";
+@import "catalog-list.less";
+@import "page-footer__copyright.less";
+@import "page-footer__list.less";
+@import "page-footer__logo.less";
+@import "list-social.less";
+@import "program__weight.less";
