--- a/source/less/additional-product.less
+++ b/source/less/additional-product.less
@@ -12,7 +12,7 @@
   position: relative;
 }
 
-.additional-product__wrapper h2 {
+.additional-product h2 {
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 24px;
   color: #000000;
@@ -22,7 +22,7 @@
   padding: 25px 0;
 }
 
-.additional-product__wrapper h2::before {
+.additional-product h2::before {
   content: "";
   position: absolute;
   width: 53px;
@@ -30,63 +30,6 @@
   background-color: #68b738;
   right: 0;
   top: 43px;
-}
-
-.list-product {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 35px;
-}
-
-.list-product__item {
-  padding: 0;
-  padding-bottom: 20px;
-  border-bottom: 1px solid #ededed;
-  height: 109px;
-}
-
-.list-product__heading {
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 16px;
-  text-transform: uppercase;
-  color: #000000;
-  margin: 14px 0 7px;
-}
-
-.list-product__text {
-  font-family: "Arial", sans-serif;
-  font-size: 14px;
-  color: #000000;
-  margin: 7px 0 14px;
-}
-
-.list-product__item--p {
-  margin-top: -5px;
-  margin-bottom: 25px;
-}
-
-.list-product__link {
-  font-family: "Oswald", "Arial", sans-serif;
-  text-transform: uppercase;
-  font-size: 16px;
-  color: #fff;
-  background-color: #68b738;
-  text-decoration: none;
-  padding: 7px 110px;
-  margin: 12px 0 17px;
-}
-
-.list-product__link:hover {
-  background-color: #5eaa2f;
-}
-
-.list-product__link:active {
-  color: #8fc46e;
-  background-color: #5eaa2f;
 }
 
 @media (min-width: @tablet-width) {
@@ -100,7 +43,7 @@
     margin-bottom: 76px;
   }
 
-  .additional-product__wrapper h2 {
+  .additional-product h2 {
     font-size: 36px;
     margin: 0;
     margin-left: 30px;
@@ -111,7 +54,7 @@
     margin-bottom: 53px;
   }
 
-  .additional-product__wrapper h2::before {
+  .additional-product h2::before {
     content: "";
     position: absolute;
     width: 328px;
@@ -129,59 +72,6 @@
     background-color: #68b738;
     left: 0;
     top: 50px;
-  }
-
-  .list-product {
-    width: 708px;
-    background-color: #fff;
-    margin-left: 30px;
-    margin-bottom: 69px;
-  }
-
-  .list-product__item {
-    padding: 0;
-    padding-bottom: 20px;
-    border: 1px solid #ededed;
-    border-bottom: none;
-    width: 100%;
-    height: 118px;
-  }
-
-  .list-product__item:last-child {
-    border-bottom: 1px solid #ededed;
-  }
-
-  .list-product__heading {
-    font-family: "Oswald", "Arial", sans-serif;
-    font-size: 20px;
-    text-transform: uppercase;
-    color: #000000;
-    margin: 20px 0 20px;
-  }
-
-  .list-product__text {
-    font-family: "Arial", sans-serif;
-    font-size: 16px;
-    color: #000000;
-    margin: 30px 0 24px 27px;
-  }
-
-  .list-product__link {
-    font-family: "Oswald", "Arial", sans-serif;
-    text-transform: uppercase;
-    font-size: 16px;
-    color: #fff;
-    background-color: #68b738;
-    text-decoration: none;
-    padding: 5px 285px;
-    margin: 7px 0 17px 37px;
-  }
-
-  .list-product__item--p {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 37px;
-    height: 80px;
   }
 }
 
@@ -203,7 +93,7 @@
     margin-top: 50px;
   }
 
-  .additional-product__wrapper h2 {
+  .additional-product h2 {
     font-size: 36px;
     margin: 0;
     margin-left: 110px;
@@ -214,7 +104,7 @@
     width: 340px;
   }
 
-  .additional-product__wrapper h2::before {
+  .additional-product h2::before {
     content: "";
     position: absolute;
     width: 958px;
@@ -224,7 +114,7 @@
     top: 50px;
   }
 
-  .additional-product__wrapper h2::after {
+  .additional-product h2::after {
     content: "";
     position: absolute;
     width: 70px;
@@ -232,67 +122,5 @@
     background-color: #68b738;
     left: 0;
     top: 50px;
-  }
-
-  .list-product {
-    width: 895px;
-    height: 289px;
-    background-color: #fff;
-    margin-left: 110px;
-  }
-
-  .list-product__item {
-    padding: 0;
-    margin: 0;
-    border: 1px solid #ededed;
-    border-bottom: none;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    border-left: none;
-    border-right: none;
-    max-height: 71px;
-  }
-
-  .list-product__item:last-child {
-    border-bottom: 1px solid #ededed;
-    border-left: none;
-    border-right: none;
-  }
-
-  .list-product__heading {
-    font-family: "Oswald", "Arial", sans-serif;
-    font-size: 20px;
-    text-transform: uppercase;
-    color: #000000;
-    margin: 23px 0 23px;
-  }
-
-  .list-product__text {
-    font-family: "Arial", sans-serif;
-    font-size: 16px;
-    color: #000000;
-    margin: 32px 0 23px;
-  }
-
-  .list-product__link {
-    font-family: "Oswald", "Arial", sans-serif;
-    text-transform: uppercase;
-    font-size: 16px;
-    color: #fff;
-    background-color: #68b738;
-    text-decoration: none;
-    padding: 13px 90px;
-    margin: 0;
-    margin-top: 20px;
-    max-height: 15px;
-  }
-
-  .list-product__item--p {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 27px 0 27px;
-    margin-left: 0;
-    width: 457px;
   }
 }
