--- a/source/less/blocks/block.less
+++ b/source/less/blocks/block.less
@@ -31,6 +31,25 @@
     margin-top: -7px;
   }
 
+  .block__time {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+    width: 124px;
+    height: 55px;
+  }
+
+  .block__weight {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    margin-right: 16px;
+    width: 124px;
+    height: 55px;
+  }
+
 @media (min-width: @tablet-width) {
   .example__block {
     margin-left: 0px;
@@ -47,6 +66,16 @@
     max-width: 85px;
     margin-left: 40px;
     margin-top: -10px;
+  }
+
+  .block__time {
+    width: 162px;
+    height: 74px;
+  }
+
+  .block__weight {
+    width: 162px;
+    height: 74px;
   }
 }
 
@@ -65,5 +94,15 @@
     max-width: 85px;
     margin-left: 40px;
     margin-top: -10px;
+  }
+
+  .block__time {
+    width: 162px;
+    height: 74px;
+  }
+
+  .block__weight {
+    width: 162px;
+    height: 74px;
   }
 }
