--- a/source/less/blocks/list-product.less
+++ b/source/less/blocks/list-product.less
@@ -24,10 +24,18 @@
   }
 
   .list-product__text {
+    display: flex;
+    justify-content: space-between;
     font-family: "Arial", sans-serif;
     font-size: 14px;
     color: #000000;
     margin: 7px 0 14px;
+    width: 280px;
+  }
+
+  .list-product__text p {
+    margin: 0;
+    padding: 0;
   }
 
   .list-product__item--p {
@@ -85,10 +93,18 @@
       }
 
       .list-product__text {
+        display: flex;
+        justify-content: space-between;
         font-family: "Arial", sans-serif;
         font-size: 16px;
         color: #000000;
-        margin: 30px 0 24px 27px;
+        margin: 20px 0 24px 27px;
+        width: 280px;
+      }
+
+      .list-product__text p {
+        margin: 0;
+        padding: 0;
       }
 
       .list-product__link {
@@ -145,11 +161,19 @@
         margin: 23px 0 23px;
       }
 
+      .list-product__text p {
+        margin: 0;
+        padding: 0;
+      }
+
       .list-product__text {
+        display: flex;
+        justify-content: space-between;
         font-family: "Arial", sans-serif;
         font-size: 16px;
         color: #000000;
-        margin: 32px 0 23px;
+        margin: 27px 0 23px;
+        width: 280px;
       }
 
       .list-product__link {
@@ -159,7 +183,7 @@
         color: #fff;
         background-color: #68b738;
         text-decoration: none;
-        padding: 13px 90px;
+        padding: 13px 80px;
         margin: 0;
         margin-top: 20px;
         max-height: 15px;
@@ -170,6 +194,6 @@
         justify-content: space-between;
         margin: 0 27px 0 27px;
         margin-left: 0;
-        width: 457px;
+        width: 587px;
       }
 }
