--- a/source/less/blocks/list-social.less
+++ b/source/less/blocks/list-social.less
@@ -52,6 +52,7 @@
     padding: 24px 14px;
     min-height: 19px;
     margin: 35px 70px;
+    margin-left: 10px;
     border: none;
     min-width: 125px;
   }
@@ -66,7 +67,7 @@
     cursor: pointer;
   }
 
-  .list-social:hover a {
+  .list-social:hover svg {
     path {
     fill: #68b738;
     }
