--- a/source/less/blocks/block-weight.less
+++ b/source/less/blocks/block-weight.less
@@ -70,6 +70,16 @@
     opacity: 0.3;
   }
 
+  .weight__slim {
+    font-family: "Oswald", "Arial", sans-serif;
+    text-transform: uppercase;
+    padding: 6px 0 0 57px;
+    margin-left: 13px;
+    font-weight: normal;
+    position: relative;
+    font-size: 24px;
+  }
+
   .weight__slim::before {
     content: "";
     width: 50px;
@@ -118,7 +128,11 @@
         width: 708px;
       }
 
-      .weight h3 {
+      .weight__slim {
+        font-family: "Oswald", "Arial", sans-serif;
+        text-transform: uppercase;
+        font-weight: normal;
+        position: relative;
         font-size: 36px;
         margin: 0;
         padding-left: 0;
@@ -232,6 +246,15 @@
       }
 
       .weight h3 {
+        font-size: 36px;
+        margin: 0;
+        margin-top: 61px;
+        margin-left: 72px;
+        padding-left: 140px;
+        max-width: 300px;
+      }
+
+      .weight__slim {
         font-size: 36px;
         margin: 0;
         margin-top: 61px;
