--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -1,6 +1,6 @@
 body {
   background-color: white;
-  font-family: "Arial", sans-serif;
+  font-family: "Oswald", "Arial", sans-serif;
   font-size: 16px;
   padding: 0;
   margin: 0 auto;
